max width to sidebar, prevent content overflowing

--- a/src/app/+taxonomy/taxonomy/info-card/info-card.component.scss
+++ b/src/app/+taxonomy/taxonomy/info-card/info-card.component.scss
@@ -11,3 +11,7 @@
     width: calc(50% - 10px);
   }
 }
+
+::ng-deep .info-card .panel-body {
+  overflow-y: auto;
+}
